<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dark_gray">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/title_signup"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/signUpTitle"
            android:textColor="@color/pink"/>

        <EditText
            android:id="@+id/first_name_signup"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="24dp"
            android:padding="12dp"
            android:hint="@string/hintFirstName"
            android:inputType="text"
            android:textColorHint="@color/gray_text"
            android:textColor="@color/gray_text"
            android:background="@drawable/ic_input_text"/>
        <EditText
            android:id="@+id/last_name_signup"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="24dp"
            android:padding="12dp"
            android:hint="@string/hintLastName"
            android:inputType="text"
            android:textColorHint="@color/gray_text"
            android:textColor="@color/gray_text"
            android:background="@drawable/ic_input_text"/>
        <EditText
            android:id="@+id/email_signup"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="24dp"
            android:padding="12dp"
            android:hint="@string/hintEmail"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/gray_text"
            android:textColor="@color/gray_text"
            android:background="@drawable/ic_input_text"/>
        <EditText
            android:id="@+id/password_signup"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="24dp"
            android:padding="12dp"
            android:hint="@string/hintPassword"
            android:inputType="textPassword"
            android:textColorHint="@color/gray_text"
            android:textColor="@color/gray_text"
            android:background="@drawable/ic_input_text"/>
        <EditText
            android:id="@+id/img_url"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="24dp"
            android:padding="12dp"
            android:hint="@string/hintUrl"
            android:textColorHint="@color/gray_text"
            android:textColor="@color/gray_text"
            android:background="@drawable/ic_input_text"/>
        <ImageView
            android:id="@+id/profile_image_signup"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="24dp"
            android:src="@drawable/default_profile"
            android:backgroundTint="@color/dark_gray"/>

        <Button
            android:id="@+id/button_signup"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="24dp"
            android:text="@string/signUpButton"
            android:textColor="@color/dark_gray"
            android:backgroundTint="@color/pink"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-12dp"
            android:orientation="horizontal">
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/already_registered_text"
              android:textColor="@color/gray_text"/>
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="4dp"
              android:text="@string/already_registered_text_button"
              android:textColor="@color/pink"
              android:onClick="onClickGoToSignin"/>
        </LinearLayout>
  </LinearLayout>
</LinearLayout>