<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_gray">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/title_create_event"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="12dp"
                android:text="@string/createEventTitle"
                android:textColor="@color/pink"/>
            <EditText
                android:id="@+id/name_event"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="24dp"
                android:padding="12dp"
                android:hint="@string/hintName"
                android:inputType="text"
                android:textColorHint="@color/gray_text"
                android:textColor="@color/gray_text"
                android:background="@drawable/ic_input_text"/>
            <EditText
                android:id="@+id/location_event"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:padding="12dp"
                android:hint="@string/hintLocation"
                android:inputType="text"
                android:textColorHint="@color/gray_text"
                android:textColor="@color/gray_text"
                android:background="@drawable/ic_input_text" />
            <EditText
                android:id="@+id/type_event"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="24dp"
                android:padding="12dp"
                android:hint="@string/hintType"
                android:inputType="text"
                android:textColorHint="@color/gray_text"
                android:textColor="@color/gray_text"
                android:background="@drawable/ic_input_text"
                android:maxLength="15"/>
            <EditText
                android:id="@+id/description_event"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:padding="12dp"
                android:hint="@string/hintDescription"
                android:inputType="textMultiLine"
                android:textColorHint="@color/gray_text"
                android:textColor="@color/gray_text"
                android:background="@drawable/ic_input_text"
                android:maxLength="200"
                android:scrollbars="vertical"
                android:gravity="top"/>
            <EditText
                android:id="@+id/start_date_event"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="24dp"
                android:padding="12dp"
                android:hint="@string/hintStartDate"
                android:inputType="date"
                android:textColorHint="@color/gray_text"
                android:textColor="@color/gray_text"
                android:background="@drawable/ic_input_text"/>
            <EditText
                android:id="@+id/start_time_event"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:padding="12dp"
                android:hint="@string/hintStartTime"
                android:inputType="time"
                android:textColorHint="@color/gray_text"
                android:textColor="@color/gray_text"
                android:background="@drawable/ic_input_text"/>
            <EditText
                android:id="@+id/end_date_event"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="24dp"
                android:padding="12dp"
                android:hint="@string/hintEndDate"
                android:inputType="date"
                android:textColorHint="@color/gray_text"
                android:textColor="@color/gray_text"
                android:background="@drawable/ic_input_text"/>
            <EditText
                android:id="@+id/end_time_event"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:padding="12dp"
                android:hint="@string/hintEndTime"
                android:inputType="time"
                android:textColorHint="@color/gray_text"
                android:textColor="@color/gray_text"
                android:background="@drawable/ic_input_text"/>

            <EditText
                android:id="@+id/num_participants_event"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="24dp"
                android:padding="12dp"
                android:hint="@string/hintNumParticipants"
                android:inputType="date"
                android:textColorHint="@color/gray_text"
                android:textColor="@color/gray_text"
                android:background="@drawable/ic_input_text"/>
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image_event"
                android:layout_width="156dp"
                android:layout_height="156dp"
                android:layout_margin="24dp"
                android:src="@drawable/default_event"
                android:backgroundTint="@color/dark_gray" />
            <Button
                android:id="@+id/button_create_event"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:onClick="onClickCreateEvent"
                android:text="@string/createEventButton"
                android:textColor="@color/dark_gray"
                android:backgroundTint="@color/pink"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>