<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/dark_gray">
        <TextView
            android:id="@+id/title_create_event"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="12dp"
            android:text="@string/createEventTitle"
            android:textColor="@color/pink"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom">
            <ImageView
                android:id="@+id/profile_img_editable"
                android:layout_width="84dp"
                android:layout_height="84dp"
                android:src="@drawable/default_profile"
                android:layout_margin="24dp"/>
        </LinearLayout>
        <EditText
            android:id="@+id/profile_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="24dp"
            android:padding="12dp"
            android:hint="@string/hintFirstName"
            android:textColorHint="@color/gray_text"
            android:textColor="@color/gray_text"
            android:backgroundTint="@color/dark_gray"
            android:editable="false"
            android:inputType="text" />
        <EditText
            android:id="@+id/profile_last_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="24dp"
            android:padding="12dp"
            android:hint="@string/hintLastName"
            android:textColorHint="@color/gray_text"
            android:textColor="@color/gray_text"
            android:backgroundTint="@color/dark_gray"
            android:editable="false"
            android:inputType="text"/>
        <EditText
            android:id="@+id/profile_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="24dp"
            android:padding="12dp"
            android:hint="@string/hintEmail"
            android:textColorHint="@color/gray_text"
            android:textColor="@color/gray_text"
            android:backgroundTint="@color/dark_gray"
            android:editable="false"
            android:inputType="textEmailAddress"/>
        <EditText
            android:id="@+id/profile_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="24dp"
            android:padding="12dp"
            android:hint="@string/hintPassword"
            android:textColorHint="@color/gray_text"
            android:textColor="@color/gray_text"
            android:backgroundTint="@color/dark_gray"
            android:editable="false"
            android:inputType="textPassword"/>
        <Button
            android:id="@+id/button_edit_profile"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:onClick="onClickEditProfile"
            android:text="@string/editProfileButton"
            android:textColor="@color/dark_gray"
            android:backgroundTint="@color/pink"/>
    </LinearLayout>
</LinearLayout>