<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dark_gray">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="top|center"
        android:layout_marginTop="100dp">
        <TextView
            android:id="@+id/questions"
            android:textSize="48sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/pink"
            android:text="@string/app_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center_horizontal"
        android:layout_marginBottom="10dp">
        <Button
            android:id="@+id/home_button_signin"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_margin="3dp"
            android:textColor="@color/pink"
            android:background="@drawable/button_border"
            android:text="@string/signInButton" />
        <Button
            android:id="@+id/home_button_signup"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_margin="3dp"
            android:backgroundTint="@color/pink"
            android:textColor="@color/dark_gray"
            android:background="@drawable/button_border"
            android:text="@string/signUpButton" />
    </LinearLayout>
</LinearLayout>
