<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/scrollTimeline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_gray">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/title_timeline"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="12dp"
                android:text="@string/timelineTitle"
                android:textColor="@color/pink" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/pink" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/past_events"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pastEvents"
                    android:textAlignment="center"
                    android:textColor="@color/pink"/>
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/pink" />
                <TextView
                    android:id="@+id/future_events"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/futureEvents"
                    android:textAlignment="center"
                    android:textColor="@color/pink"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/pink" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/timeline_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="24dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

